# ncurses-game

./: .gitignore  CMakeLists.txt  README.md
assets/bar/: dmg.txt  hp.txt  turn.txt
assets/battle/: enemyTurn.txt  grave.txt  playerTurn.txt  turnBar.txt
assets/enemy/: goblin.txt  goblinAttack1.txt  goblinAttack2.txt
assets/knight/: attack1.txt  attack2.txt  attack3.txt  block1.txt  block3.txt  bow.txt  defeated.txt  icon.txt  inBattle.txt  main.txt  shoot1.txt  shoot2.txt  sword.txt  withBow.txt
assets/menu/: 2.txt  3.txt  4.txt  exit.txt  gameOver.txt  start.txt
include/: BattleController.hpp  BattleLogic.hpp  Constants.hpp  Enemy.hpp  EnemyBase.hpp  Entity.hpp  Field.hpp  Floor.hpp  Game.hpp  GameLogic.hpp  LivingEntity.hpp  Menu.hpp  Player.hpp  SpikedTrap.hpp  Utils.hpp  Wall.hpp  Window.hpp
src/: BattleController.cpp  BattleLogic.cpp  Color.cpp  Enemy.cpp  EnemyBase.cpp  Field.cpp  Floor.cpp  Game.cpp  GameLogic.cpp  Menu.cpp  Player.cpp  Utils.cpp  Wall.cpp  Window.cpp
trueGame/: CMakeLists.txt  main.cpp  shell.nix  ut.cpp
trueGame/include/: Color.hpp  Constants.hpp  Enemy.hpp  Entity.hpp  Field.hpp  Floor.hpp  Game.hpp  GameLogic.hpp  LivingEntity.hpp  Player.hpp
trueGame/src/: Enemy.cpp  Field.cpp  Floor.cpp  Game.cpp  GameLogic.cpp  LivingEntity.cpp  Player.cpp  SpikedTrap.cpp  Wall.cpp
